# migrave_common

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
common/src/migrave_common/: component_monitoring_enumerations.py  component_sm_base.py  file_utils.py
common/src/migrave_common_test/fault_tolerant_components/: README.md  main_cam.py  main_kn.py
common/src/migrave_common_test/fault_tolerant_components/components/schemas/: general.json  general.schema  monitoring.json  monitoring.schema
common/src/migrave_common_test/fault_tolerant_components/components/src/knowledge_base/: knowledge_base_sm.py  run.py
common/src/migrave_common_test/fault_tolerant_components/components/src/knowledge_base/config/: config.yaml
common/src/migrave_common_test/fault_tolerant_components/components/src/rgbd_camera/: rgbd_camera_sm.py  run.py
common/src/migrave_common_test/fault_tolerant_components/components/src/rgbd_camera/config/: config.yaml
ros/src/ros_vision_utils/: utils.py
