<?xml version="1.0"?>
<package format="2">
  <name>migrave_common</name>
  <version>1.0.0</version>
  <description>A package for both ros-dependent and -independent utils</description>

  <author email="mohammad.wasil@h-brs.de">Mohammad Wasil</author>
  <maintainer email="robotics@h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>migrave_ros_msgs</exec_depend>

  <export>
  </export>
</package>
